--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -188,7 +188,8 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \section*{Honors \& Awards}
 %\noindent
 
-\subsection*{Academic Grants, Honors \& Awards}
+\subsection*{Academic Grants, Honors, Awards \& Accolades}
+\years{10/2021--06/2022} \textsc{Future Research Leaders 2021/22 Programme} accolade. DMU, Leicester, UK.\\
 \years{2019c} \textsc{Web Audio Conference 2019 Best Paper Award} to Anna Xambó, Robin Støckert, Alexander Refsum Jensenius and Sigurd Saue. NTNU, Trondheim, Norway.\\
 \years{2019b} \textsc{The EUNIS DØRUP E-Learning Award} to Robin Støckert, Alexander Refsum Jensenius, Anna Xambó and Øyvind Brandtsegg. NTNU, Trondheim, Norway.\\
 %\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 kr, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
@@ -211,7 +212,7 @@ Role: Creator \& Director.
 \subsection*{Principal Investigator}
 
 {
-\years{04/2020-06/2021}\textsc{Human Data Interaction Network Plus/EPSRC Grant} \\
+\years{04/2020-10/2021}\textsc{Human Data Interaction Network Plus/EPSRC Grant} \\
 Funding body: EPSRC. \\
 Project: ``MIRLCAuto: A Virtual Agent for Music Information Retrieval in Live Coding''.\\
 Role: PI. \\
@@ -546,13 +547,14 @@ Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. 
 \subsection*{Solo Albums}
 \noindent
 
-\years{2018}Anna Xambó. \emph{H2RI} [FLAC/MP3 files]. Chicago (IL, USA): pan y rosas.\\
+\years{2018}Anna Xambó. \emph{H2RI} [FLAC/MP3 files]. Chicago (IL, USA): pan y rosas discos.\\
 \years{2013}peterMann. \emph{On the Go} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{2011}peterMann. \emph{init} [promo CD \& FLAC/MP3 files]. Barcelona: Carpal Tunnel.
 
 \subsection*{Group Albums}
 \noindent
 
+\years{2021}Dirty Electronics Ensemble, Jon.Ogara, and Anna Xambó. \emph{Dirty Dialogues} (live album) [FLAC/MP3 files]. Chicago (IL, USA): pan y rosas discos.\\
 \years{2019}Anna Weisling and Anna Xambó. \emph{Beacon} (EP) [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\
 \years{1996}La Más Fina. \emph{Zande Phondex} [CD]. Barcelona: Apache Productions.\\
 \years{1994}La Más Fina. \emph{Como quien dice la hoja iberia extrafina} [Cassette]. Barcelona: Self-released.\\
@@ -700,7 +702,7 @@ Role: Concept, implementation and tangible user interface design.
 \subsection*{Installations \& Visuals}
 \noindent
 
-\years{09/2002}\emph{I love Japan}, Circuit Festival, Barcelona.\\
+\years{09/2002}\emph{I love Japan}, Fake Industries, Circuit Festival, Barcelona.\\
 %Description: Audiovisual installation for Divinas Palabras' Japan collection. \\
 Role: Visuals.\\
 Collaborators: Urtzi Grau (director), Emma Dünner, Jorge Meneses, Ana Otero.\\
@@ -747,13 +749,17 @@ Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \subsection*{Undergraduate Courses}
 \noindent
 
+\years{10/2021--12/2021}Course: \emph{MATD3009 Advanced Digital Signal Processing Music} (30 h). \# Students: $\sim$4. \\
+De Montfort University, Leicester, UK.\\ 
+\years{10/2021--12/2021}Course: \emph{MATD2004 Further Digital Signal Processing} (30 h). \# Students: $\sim$13. \\
+De Montfort University, Leicester, UK.\\ 
 \years{01/2020--04/2021}Course: \emph{MATD1019 Audio Electronics Fundamentals} (12 h). \# Students: $\sim$10. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
-\years{01/2021--04/2021}Course: \emph{TECH3011 Studio Technology: Audio Electronics} (12 h). \# Students: $\sim$16. \\
+\years{01/2021--04/2021}Course: \emph{TECH3011 Studio Technology: Audio Electronics} (36 h). \# Students: $\sim$16. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Creation of content for lectures and labs, instruction and assessment.\\
-\years{10/2020--12/2020}Course: \emph{MATD2004 Further Digital Signal Processing} (10 h). \# Students: $\sim$14. \\
+\years{10/2020--12/2020}Course: \emph{MATD2004 Further Digital Signal Processing} (30 h). \# Students: $\sim$14. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, seminars and labs (blended teaching), instruction and assessment.\\
 \years{10/2020--12/2020}Course: \emph{MATD2019 Further Audio Electronics} (10 h). \# Students: $\sim$10. \\
@@ -765,7 +771,7 @@ Role: Course leader, creation of content for lectures, instruction and assessmen
 \years{01/2020--04/2020}Course: \emph{TECH2019 Audio Technology 2: Audio Electronics} (12 h). \# Students: $\sim$16. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Course leader, creation of content for lectures, instruction and assessment.\\
-\years{01/2020--04/2020}Course: \emph{TECH3011 Studio Technology: Audio Electronics} (12 h). \# Students: $\sim$16. \\
+\years{01/2020--04/2020}Course: \emph{TECH3011 Studio Technology: Audio Electronics} (36 h). \# Students: $\sim$16. \\
 De Montfort University, Leicester, UK.\\ 
 Role: Creation of content for lectures and labs, instruction and assessment.\\
 \years{02/2004--06/2004}Course: \emph{Experimental Motion Graphics} (45 h). \# Students: $\sim$15. \\
@@ -843,6 +849,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 %\noindent
 
 \subsection*{Master Students}
+\years{07/2021--10/2021}Creative portfolio \& short dissertation (master thesis) co-supervisor of Harri Bettsworth (Music Technology and Innovation, DMU). Master thesis title: \emph{``Exploring How Uncanny Sound Can Trigger Fear In Video Game''}.\\
 \years{01/2020--07/2020}Master thesis supervisor of Karolina Jawad (Music Communication Technology, NTNU). Master thesis title: \emph{``Gatekeepers by Design? Gender HCI for Audio and Music Hardware''}. Our publication at ICLI '20 (see Peer-Reviewed Conference Papers) has inspired this work.\\
 \years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru (Computer Science, QMUL). Master thesis title: \emph{``Moodscape Generator: Automated Generation of Soundscapes''}.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
@@ -855,6 +862,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \section*{Assessment}
 \noindent
 
+\years{09/2021}External PhD examiner for Joaquín Roberto Díaz Durán. PhD programme: Investigación en Humanidades, Artes y Educación (Research in Humanities, Arts and Education), Facultad de Bellas Artes de Cuenca, Universidad de Castilla - La Mancha, Spain.\\
 \years{09/2021}External PhD examiner for Jack Armitage. PhD programme: Media \& Arts Technologies, Queen Mary University of London, UK.\\
 \years{02/2021}PhD review (midway assessment) for Sam Topley, PhD programme: DMU/Midlands4Cities. Leicester, UK.\\
 \years{05/2020}External assessor, IMV PhD Midway Assessment for Qichao Lan, Department of Musicology, Faculty of Humanities, University of Oslo, Norway.\\
@@ -937,13 +945,14 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Conference Academic Chair / Meta-Reviewer / Local Chair}
 \noindent
 
+\years{2022}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2022). Auckland, New Zealand.\\
 \years{2021b}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Tangible, Embedded and Embodied Interaction 2022}. KAIST, Daejeon, Republic of Korea.\\
-\years{2021a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2021).\\
+\years{2021a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2021). Shanghai, China.\\
 \years{2020e}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Creativity \& Cognition 2021}. Venice, Italy.\\
 \years{2020d}\textsc{Conference Programme Committee Member} (Associate Chair). \emph{ACM Tangible, Embedded and Embodied Interaction 2021}. Salzburg, Austria.\\
 \years{2020c}\textsc{Conference Session Chair} (``Hardware and Software for SMC''). \emph{Sound and Music Computing Conference}. Torino, Italy.\\
 \years{2020b}\textsc{Conference Poster Co-Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
-\years{2020a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2020).\\
+\years{2020a}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{New Interfaces for Musical Expression} (2020). Birmingham, UK.\\
 \years{2019g}\textsc{Conference Local Committee Member}. \emph{International Conference on Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019f}\textsc{Conference General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019e}\textsc{Conference Programme Committee Member} (Meta-Reviewer). \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
@@ -1077,7 +1086,7 @@ Scientific Apps: MATLAB, Octave, R, SPSS.\\
 Version Control Systems: CVS, Git, Subversion.\\
 Music \& Audio Apps: DAWs (Ableton Live, Cubase, Reaper, Logic Pro), Max/MSP, PureData, SuperCollider, wave editors (Audacity, SoundForge, WaveEditor), audio measurement \& test (Lindos).\\
 Text \& Multimedia Analysis Apps: ELAN, MAXQDA, NVivo, VCode.\\
-Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty).\\
+Other Apps: Graphics and multimedia authoring apps (AfterEffects, Blender, Dreamweaver, Final Cut Pro, Flash, Freehand, Illustrator, InDesign, Photoshop, Premiere, Processing, Combustion, 3DMax), LaTeX, MS Office suite. CMS (Drupal, WordPress). Static site generators (Jekyll, 11ty). Code editors (Atom, Visual Studio Code).\\
 Online Learning Platforms: Blackboard, Canvas, Teams.\\
 Hardware: Arduino, Bela, Lindos.\\
 Circuit simulators: Tinkercad, OrCAD.
