--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -17,7 +17,7 @@
 
 % DOCUMENT LAYOUT
 \usepackage{geometry} 
-\geometry{a4paper, textwidth=7in, textheight=10in, marginparsep=8pt, marginparwidth=.7in}%original: marginparsep=7pt, marginparwidth=.6in
+\geometry{a4paper, textwidth=7in, textheight=10.1in, marginparsep=8pt, marginparwidth=.7in}%original: marginparsep=7pt, marginparwidth=.6in
 \setlength\parindent{0in}
 
 % FONTS
@@ -95,7 +95,7 @@ bookmarks, colorlinks, breaklinks,
 \pagenumbering{gobble} % this suppresses page numbering
 
 {\textbf{Anna Xambó}}\\ 
-Senior Lecturer in Music and Audio Technology, Faculty of Computing, Engineering and Media, DMU -- \href{http://annaxambo.me/}{annaxambo.me}\\
+Senior Lecturer in Music and Audio Technology, De Montfort University (DMU) -- \href{http://annaxambo.me/}{annaxambo.me}\\
 
 {\textbf{Education}}\\
 \textsc{PhD}, Music computing \& HCI, The Open University (OU), 2015.\\
@@ -104,26 +104,26 @@ BA, MA, Social and Cultural Anthropology, Universitat de Barcelona, 1996.\\
 
 {\textbf{Employment}}\\
 Senior Lecturer, DMU, 2020--present. I am teaching undergraduate courses in audio electronics, studio technology and DSP. 
-I have been associate professor, Norwegian University of Science and Technology (NTNU) (2018--2019) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--2019) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--2019) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
-I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--2010) as well as co-founder of my own interactive media studio (2004--2010).\\
+I have been associate professor, Norwegian University of Science and Technology (NTNU) (2018--19) where I also was Music Communication \& Technology (MCT) master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--19) and postdoc at Georgia Tech (2015--17). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--19) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--17). From 2013--14, I was a research fellow at the London Knowledge Lab, University College London Institute of Education.
+I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--10) as well as co-founder of my own interactive media studio (2004--10).\\
 
-{\textbf{Grants/Awards}} from HDI / EPSRC (2020-2021); from NTNU (2019, 2018--2020); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); OU (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (1998--1999, 2001--2002).\\
+{\textbf{Grants/Awards/Accolades}} from DMU Future Research Leaders Programme (2021-22); HDI / EPSRC (2020--21); NTNU (2019, 2018--20); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); OU (2010--13, 2010); Fundació Caixa de Sabadell (2003--04); and Generalitat de Catalunya (1998--99, 2001--02).\\
 
 {\textbf{Peer-Reviewed Journal Publications}} in Computer Music Journal (2019); Journal of Audio Engineering Society (2018, 2020); Interacting with Computers (2017); International Journal of Social Research Methodology, (2017); Qualitative Research (2017); ACM Transactions on Computer-Human Interaction (2013); and Information Processing \& Management (2013).\\
 
-{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--2021); Web Audio Conference (WAC) (2017--2021); Audio Mostly (2010, 2017--2018); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--2018); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--2012); and International Computer Music Conference (2011).\\
+{\textbf{Conference and Festival Participation}} at New Interfaces for Musical Expression (NIME) (2008, 2011, 2014, 2017--21); Web Audio Conference (WAC) (2017--21); Audio Mostly (2010, 2017--18); Tangible, Embedded, and Embodied Interaction Conference (TEI) (2011, 2017--18); International Conference on Computational Creativity (2017); International Conference on Live Coding (ICLC) (2019); International Society for Music Information Retrieval Conference (2016); Sound and Music Computing (SMC) Conference (2010, 2012, 2016); International Conference of Live Interfaces (ICLI) (2016, 2020); Research in Equity and Sustained Participation in Engineering, Computing, and Technology (2015); CHI (2014); International Workshop on Content-Based Multimedia Indexing (2013); British Computer Society Human-Computer Interaction (2011--12); and International Computer Music Conference (2011).\\
 
 {\textbf{Invited Keynote Talks}} at WAC (2021); SMC (2020); Women in Sound Women on Sound (2016).\\
 
-{\textbf{Performances}} at Network Music Festival (2020); Eulerroom Equinox (2020); PACE / DMU (2020); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--2021); Cube Fest (2018); NIME (2017--2018, 2021); TEI Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
+{\textbf{Performances}} at Network Music Festival (2020); Eulerroom Equinox (2020); PACE / DMU (2020); ICLC (2019); Dokkhuset (2018); Sonic Arts Research Center (2018); Inter/sections (2018); WAC (2017--21); Cube Fest (2018); NIME (2017--18, 2021); TEI Conference (2018); Audio Mostly (2017); Root Signals Festival (2017); Freedonia (2017); Women in Sound Women on Sound (2016); Phonos (2013); Niu (2012); Mostra Sonora i Visual (2006); Minima Festival (2004); and Sonar Festival (2002).\\
 
 {\textbf{Conference Organizer}} for WAC (2019, general co-chair; 2017, session chair; 2016, music/artworks co-chair); NIME (2019, paper co-chair, session chair); ICLI (2020, conference local committee member); ACM Creativity \& Cognition (2019, programme committee member); ACM Spatial User Interaction (2018, programme committee member); Computational Creativity (2017, local committee member); International Computer Music Conference (2011, session chair); and TEI Conference (2020--2021, programme committee member).\\
 
 {\textbf{Interviews/Press Coverage}} in OnCurating.org (2020); Ballade.no (2019); Girls Geek Dinner Trondheim (2019); ACM Interactions (2018); Netlabel Interview Project (2018); and Wallifornia Music Tech (2018).\\
 
-{\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--2012); UPF (2011); and OU (2010).\\
+{\textbf{Research Visits}} at Filmuniversität Babelsberg KONRAD WOLF (2018--2019); University of Strathclyde (2011--12); UPF (2011); and OU (2010).\\
 
-{\textbf{Blog Coordinator}} at MIRLCAuto (2020--2021); WoNoMute (2018--2019); AudioCommons (2017--2018); Women in Music Tech (2016--2017); Methodological Innovation in Digital Arts and Social Sciences (2013--2014); postWIMP (2010--2011); and streetTypes (2006--2009).
+{\textbf{Blog Coordinator}} at MIRLCAuto (2020--21); WoNoMute (2018--2019); AudioCommons (2017--18); Women in Music Tech (2016--17); Methodological Innovation in Digital Arts and Social Sciences (2013--14); postWIMP (2010--11); and streetTypes (2006--09).
 
 %\vspace{1cm}
 %\vfill{}
@@ -134,8 +134,8 @@ I have been working since 2000 as interaction designer, web designer and web dev
 % ---- PLEASE LEAVE THIS BACKLINK FOR ATTRIBUTION AS PER CC-LICENSE
 Typeset in \href{http://nitens.org/taraborelli/cvtex}{
 %\fontspec{Times New Roman}
-\XeTeX }\\
-% ---- FILL IN THE FULL URL TO YOUR CV HERE
+\XeTeX } % ---- FILL IN THE FULL URL TO YOUR CV HERE
+•\- 
 \href{http://github.com/axambo/CV}{http://github.com/axambo/CV}}
 \end{center}
 
